--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -7,6 +7,7 @@
 <!ENTITY Ctr_space			"Mjezera">
 <!ENTITY Ctr_separator		"Dźělatko">
 <!ENTITY Ctr_puibseparator	"Dźělatko tłóčatkow woknoweho menija">
+<!ENTITY Ctr_sidebarbutton	"(Sidebar)">
 
 <!ENTITY Ctr_cuibuttons		"Tłóčatka">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
@@ -19,8 +20,8 @@
 <!ENTITY Ctr_combrelstoptt	"[stój][aktualizować] &gt;&gt; [stój-aktualizować]">
 <!ENTITY Ctr_tnot			"(Rajtarki nic horjeka)">
 
-<!ENTITY Ctr_tabcolors_t	"Swójske barby">
-<!ENTITY Ctr_icons_t		"Favicon &amp; icons">
+<!ENTITY Ctr_tabcolors_t	"Rajtarkowe barby a tekst">
+<!ENTITY Ctr_icons_t		"Faworitowe a druhe symbole">
 
 <!ENTITY Ctr_tabs			"Rajtarki">
 <!ENTITY Ctr_tabs0			"Skulojćene rajtarki (standard za Australis)">
@@ -28,23 +29,28 @@
 <!ENTITY Ctr_tabs1m			"Róžkate rajtarki (na Australis přiměrjeny)">
 <!ENTITY Ctr_tabs2			"Skulojćene rajtarki (alternatiwny)">
 <!ENTITY Ctr_tabs3			"Skulojćene rajtarki (alternatiwa Aero)">
-<!ENTITY Ctr_tabforminfo	"Tab appearance is controlled by the current theme.">
+<!ENTITY Ctr_tabforminfo	"Napohlad rajtarkow wot aktualneje drasty wotwisuje.">
 <!ENTITY Ctr_tabsontop0		"Rajtarki horjeka (standard) - [njenastajeny]">
 <!ENTITY Ctr_tabsontop1		"Rajtarki horjeka - stajće [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Rajtarki nic horjeka - stajće [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Rajtarki nic horjeka (v2) - stajće [tabsontop=false]">
 <!ENTITY Ctr_tabsontopI1	"Přidawa atribut [tabsontop=true/false] na">
 <!ENTITY Ctr_tabsintitlebar	"Titulna lajsta Firefox (about:config)">
 <!ENTITY Ctr_tabwidthdef	"(standard)">
 <!ENTITY Ctr_tabwidthcla	"(klasiski)">
 <!ENTITY Ctr_tabmaxwidth	"Maksimalna šěrokosć:">
 <!ENTITY Ctr_tabminwidth	"Minimalna šěrokosć:">
-<!ENTITY Ctr_tabwidthinfo	"Tabs min-width and max-width are controlled by TabMixPlus / TabUtilities">
-<!ENTITY Ctr_closetab_0		"Rajtark začinić (standard)">
-<!ENTITY Ctr_closetab_1		"Rajtark začinić: jenož na aktiwnym rajtarku">
-<!ENTITY Ctr_closetab_2		"Rajtark začinić: nihdźe">
-<!ENTITY Ctr_closetab_3		"Rajtark začinić: na kóncu rajtarkoweje lajsty">
-<!ENTITY Ctr_closetab_4		"Rajtark začinić: na spočatku rajtarkoweje lajsty">
-<!ENTITY Ctr_closetab_5		"Rajtark začinić: na wšěch rajtarkach (forced)">
+<!ENTITY Ctr_tabwidthinfo	"Minimalna a maksimalna šěrokosć rajtarkow so přez TabMixPlus / TabUtilities kontrolujetej">
+<!ENTITY Ctr_closetab_0		"Rajtark začinić">
+<!ENTITY Ctr_closetab_1		"Jenož na aktiwnym rajtarku">
+<!ENTITY Ctr_closetab_2		"Nihdźe">
+<!ENTITY Ctr_closetab_3		"Na kóncu rajtarkoweje lajsty">
+<!ENTITY Ctr_closetab_4		"Na spočatku rajtarkoweje lajsty">
+<!ENTITY Ctr_closetab_5		"Na wšěch rajtarkach (wunuzowany)">
+<!ENTITY Ctr_closetab_hfot	"Hide for one visible tab">
+<!ENTITY Ctr_closealt		"Alternative icon">
+<!ENTITY Ctr_closeonleft	"Alternative position on tab">
+<!ENTITY Ctr_close_wwltab	"Close window with last visible tab (about:config)">
 
 <!ENTITY Ctr_appbutton		"Nałoženske tłóčatko">
 <!ENTITY Ctr_appbutton0		"Tłóčatko znjemóžnjeny">
@@ -52,7 +58,7 @@
 <!ENTITY Ctr_appbutton1wt	"Tłóčatko na symbolowej lajsće (jenož tekst)">
 <!ENTITY Ctr_appbutton2		"Tłóčatko na titulnej lajsće [Firefox]">
 <!ENTITY Ctr_appbutton2io	"Tłóčatko na titulnej lajsće [Firefox] (jenož symbol)">
-<!ENTITY Ctr_paneluibtweak	"Orange panel menu button on tabs toolbar">
+<!ENTITY Ctr_paneluibtweak	"Oranžowe menijowe tłóčatko na rajtarkowej lajsće">
 <!ENTITY Ctr_appbuttonc_o	"Tłóčatkowa barba: Oranžowy (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Tłóčatkowa barba: Módry (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Tłóčatkowa barba: Čorny (Nightly)">
@@ -64,7 +70,7 @@
 <!ENTITY Ctr_appbuttonc_pu	"Tłóčatkowa barba: Purpur">
 <!ENTITY Ctr_appbuttonc_wh	"Tłóčatkowa barba: Běły">
 <!ENTITY Ctr_appbuttonI1	"Nowy start doporučeny">
-<!ENTITY Ctr_appbuttonI1e	"Njeje widźomny w titulnej lajsće Windows!">
+<!ENTITY Ctr_appbuttonI1e	"Njeje widźomny w titulnej lajsće Windows, jenož w titulnej lajsće Firefox!">
 <!ENTITY Ctr_appbuttonI2	"Tłóčatkowe barby su jenož widźomne na titulnej lajsće a rajtarkowej lajsće!">
 <!ENTITY Ctr_alttbappb		"Alternatiwne symbole">
 <!ENTITY Ctr_appbutmhi		"Wyša pozicija (jeli je na rajtarkowej lajsće)">
@@ -74,17 +80,19 @@
 <!ENTITY Ctr_ui				"Wužiwarski powjerch">
 <!ENTITY Ctr_nbiconsize0	"Atribut nawigaciskeje lajsty stajić">
 <!ENTITY Ctr_smallnavbut	"Małe tłóčatka na nawigaciskej lajsće">
-<!ENTITY Ctr_bfurlbarfix	"Ramikowy radius za 'přesuwajomne tłóčatko Wróćo/Doprědka' a 'napohlad małych tłóčatkow' porjedźić">
+<!ENTITY Ctr_bfurlbarfix	"Ramikowy radius za adresowe lajsty porjedźić">
 <!ENTITY Ctr_backforward	"Přesuwajomne tłóčatko Wróćo-Doprědka">
 <!ENTITY Ctr_hide_bf_popup	"Meni historije přez tłóčenje tasty myše schować">
+<!ENTITY Ctr_noconicons		"Replace page context menu icons with labels (back, forward, stop, reload, bookmark page)">
 <!ENTITY Ctr_wincontrols	"Přesuwajomne wodźenske elementy połneje wobrazowki">
 <!ENTITY Ctr_starinurl		"Hwězdne tłóčatko w adresowej lajsće (startujće Firefox znowa!)">
+<!ENTITY Ctr_feedinurl		"Feed-button in urlbar (startujće Firefox znowa!)">
 <!ENTITY Ctr_mstatusbar		"Přesuwajomny wobłuk statusoweje lajsty">
 <!ENTITY Ctr_hideurelstop	"Tłóčatce Stój a Znowa adresowych lajstow schować">
 <!ENTITY Ctr_combrelstop	"Tłóčatce Stój a Znowa kombinować">
 <!ENTITY Ctr_panelmenucol	"Pólne menije: alternatiwna pozadkowa barba">
 <!ENTITY Ctr_hideprivmask	"Priwatny modus: maskowy pokazowar schować">
-<!ENTITY Ctr_verifiedcolors	"Green/blue identity-box for verified websites">
+<!ENTITY Ctr_verifiedcolors	"Zeleny/módry identifikaciski kašćik za wobkrućene websydła">
 <!ENTITY Ctr_findbar		"Pytanska lajsta">
 <!ENTITY Ctr_findbar_def	"Standardna pozicija">
 <!ENTITY Ctr_findbar_top	"Horjeka">
@@ -95,8 +103,8 @@
 <!ENTITY Ctr_nav_txt_ico1	"Wulke symbole pokazać">
 <!ENTITY Ctr_nav_txt_ico2	"Symbole a tekst pokazać">
 <!ENTITY Ctr_nav_txt_ico3	"Jenož tekst pokazać">
-<!ENTITY Ctr_stoprel0		"Reload and stop button settings">
-<!ENTITY Ctr_stoprel1		"Toolbar: place reload button after stop button!">
+<!ENTITY Ctr_stoprel0		"Nastajenja za tłóčatce Znowa a Stój">
+<!ENTITY Ctr_stoprel1		"Wažny: Tłóčatko Znowa za tłóčatkom Stój zaměstnić!">
 <!ENTITY Ctr_cpanelmenus	"Kompaktne pólne menije (zapołožki, historija atd.)">
 <!ENTITY Ctr_hidezoomres	"Skalowanske elementy na symbolowej lajsće: Tłóčatko za wróćostajenje skalowanja schować">
 <!ENTITY Ctr_pmhidelabels	"Pólny meni: Tekst tłóčatkow schować">
@@ -115,7 +123,6 @@
 <!ENTITY Ctr_tabpen_t		"njezačitany">
 <!ENTITY Ctr_tabunr_t		"nječitany">
 <!ENTITY Ctr_ntab_t			"nowy rajtark">
-<!ENTITY Ctr_customsqtab0	"Swójske rajtarkowe barby">
 <!ENTITY Ctr_customsqtab1	"Pozadk">
 <!ENTITY Ctr_ctext			"Tekst">
 <!ENTITY Ctr_ctextsh		"Tekstowy sćin">
@@ -129,15 +136,17 @@
 <!ENTITY Ctr_bold			"Tučny">
 <!ENTITY Ctr_italic			"Kursiwny">
 
-<!ENTITY Ctr_favicon		"Faworitowy symbol">
+<!ENTITY Ctr_favicon		"Nastajenja faworitoweho symbola">
 <!ENTITY Ctr_emptyfavicon	"Prózdny faworitowy symbol wobnowić (jeli sydło žadyn njeposkića)">
-<!ENTITY Ctr_emptyfavicon2	"Replace generic favicon (empty and dotted) with sheet favicon">
-<!ENTITY Ctr_faviconurl		"Favicon in urlbar (restart Firefox!)">
-<!ENTITY Ctr_padlock_hid	"Padlock (hidden)">
-<!ENTITY Ctr_padlock_def	"Padlock (default)">
-<!ENTITY Ctr_padlock_cla	"Padlock (classic)">
-<!ENTITY Ctr_padlock_mod	"Padlock (modern)">
-<!ENTITY Ctr_padlock_ext	"Security icons">
+<!ENTITY Ctr_emptyfavicon2	"Prózdny a dypkowany faworitowy symbol přez łopjenowy symbol wuměnić">
+<!ENTITY Ctr_noemptypticon	"Remove empty favicon from pinned tab">
+<!ENTITY Ctr_faviconurl0	"Icons in urlbar">
+<!ENTITY Ctr_faviconurl		"Faworitowy symbol w adresowej lajsće (Firefox znowa startować!)">
+<!ENTITY Ctr_padlock_hid	"Zamkowy symbol (schowany)">
+<!ENTITY Ctr_padlock_def	"Zamkowy symbol (standard)">
+<!ENTITY Ctr_padlock_cla	"Zamkowy symbol (klasiski)">
+<!ENTITY Ctr_padlock_mod	"Zamkowy symbol (moderny)">
+<!ENTITY Ctr_padlock_ext	"Wěstotne symbole">
 
 <!ENTITY Ctr_invicons		"Inwertowane symbole">
 <!ENTITY Ctr_menubar		"Menijowa lajsta">
@@ -147,14 +156,14 @@
 
 <!ENTITY Ctr_toolbars		"Nastajenja symboloweje lajsty">
 <!ENTITY Ctr_dblclnewtab	"Dwójne kliknjenje wočinja 'nowy' rajtark (z pomocu browser.newtab.url)">
-<!ENTITY Ctr_hidetbwot		"Hide tabs toolbar with one tab (restart Firefox!)">
+<!ENTITY Ctr_hidetbwot		"Rajtarkowu lajstu z jenož jednym rajtarkom schować (Firefox znowa startować!)">
 <!ENTITY Ctr_notabfog		"Pozadkowu młu wotstronić (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"Pozadkowu barbu wotstronić (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"Mjezeru wyše symboloweje lajsty redukować (jeli móžno)">
 <!ENTITY Ctr_alttabstb		"Alternatiwna pozadkowa barba">
 
 <!ENTITY Ctr_altmenubar		"Pozadkowu barbu přidać (titulna lajsta dźěłoweho systema)">
-<!ENTITY Ctr_altmenubarpos	"Alternative position (below Firefox titlebar)">
+<!ENTITY Ctr_altmenubarpos	"Alternatiwna pozicijia (pod titulnej lajstu Firefox)">
 <!ENTITY Ctr_menubarnofog	"Pozadkowu barbu/młu wotstronić (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_hidenavbar		"Nawigacisku lajstu schować">
@@ -165,29 +174,28 @@
 
 <!ENTITY Ctr_closeabarbut	"Tłóčatko 'Začinić' na lajsće přidatkow schować">
 <!ENTITY Ctr_highaddonsbar	"Wysokosć symboloweje lajsty powjetšić">
-<!ENTITY Ctr_noaddonbarbg	"Pozadkowu barbu wotstronić (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_animation		"Animacija">
 <!ENTITY Ctr_throbberalt	"Alternatiwna animacija za začitowanje rajtarkoweho symbola">
-<!ENTITY Ctr_bmanimation	"Animacija za 'Zapołožku přidać">
+<!ENTITY Ctr_bmanimation	"Animacija za 'Zapołožku přidać'">
 <!ENTITY Ctr_pananimation	"Animacija za wočinjenje pola">
-<!ENTITY Ctr_tabanimation	"Animacija za začinjenje/wočinjenje rajtarka (about:config)">
-<!ENTITY Ctr_dlanimation	"Animacija za 'sćehnjenske zdźělenje' (about:config)">
+<!ENTITY Ctr_tabanimation	"Animacija za začinjenje/wočinjenje rajtarka (nastajenje about:config)">
+<!ENTITY Ctr_dlanimation	"Animacija za 'sćehnjenske zdźělenje' (nastajenje about:config)">
 
 <!ENTITY Ctr_toolsitem		"Menijowy zapisk w meniju Nastroje">
 <!ENTITY Ctr_appmenuitem	"Menijowy zapisk w meniju nałoženskich tłóčatkow">
-<!ENTITY Ctr_contextitem	"Menuitem in toolbars context menu">
+<!ENTITY Ctr_contextitem	"Menijowy zapisk w kontekstowym meniju symboloweje lajsty">
 <!ENTITY Ctr_cuibotbuttons	"Wosebite tłóčatka w 'přiměrjenskim' modusu">
 
 
-<!ENTITY Ctr_pw_settings	"Settings">
-<!ENTITY Ctr_pw_set_reset	"Restore defaults">
-<!ENTITY Ctr_pw_set_predef	"Classic preset">
-<!ENTITY Ctr_pw_set_export	"Export preferences">
-<!ENTITY Ctr_pw_set_import	"Import preferences">
+<!ENTITY Ctr_pw_settings	"Nastajenja">
+<!ENTITY Ctr_pw_set_reset	"Standard wobnowić">
+<!ENTITY Ctr_pw_set_predef	"Klasiske standardne hódnoty">
+<!ENTITY Ctr_pw_set_export	"Nastajenja eksportować">
+<!ENTITY Ctr_pw_set_import	"Nastajenja importować">
 
 <!ENTITY Ctr_special_font	"Nastajenja za pozadkowu barbu su jenož za standardnu drastu!">
-<!ENTITY Ctr_special_info	"Někotre nastajenja poskićeja wizuelne změny jenož we wěstach padach!">
+<!ENTITY Ctr_special_info	"Někotre nastajenja snano wizuelne změny nic we wšěch padach poskićeja!">
 <!ENTITY Ctr_special_info2	"Nastajenja su za standardnu drastu sčinjene a je móžno, zo z druhimi drastami njefunguja!">
 <!ENTITY Ctr_support		"Podpěranski forum">
 <!ENTITY Ctr_newversion		"Nowa wersija?">
