--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -7,6 +7,7 @@
 <!ENTITY Ctr_space			"Mjazyrum">
 <!ENTITY Ctr_separator		"Źěleńska smužka">
 <!ENTITY Ctr_puibseparator	"Źěleńska smužka tłocaškow pólowego menija">
+<!ENTITY Ctr_sidebarbutton	"(Sidebar)">
 
 <!ENTITY Ctr_cuibuttons		"Tłocaški">
 <!ENTITY Ctr_cuibutnormal	"Normalny">
@@ -19,8 +20,8 @@
 <!ENTITY Ctr_combrelstoptt	"[stoj][aktualizěrowaś] &gt;&gt; [stoj-aktualizěrowaś]">
 <!ENTITY Ctr_tnot			"(Rejtarki nic górjejce)">
 
-<!ENTITY Ctr_tabcolors_t	"Swójske barwy">
-<!ENTITY Ctr_icons_t		"Favicon &amp; icons">
+<!ENTITY Ctr_tabcolors_t	"Rejarkowe barwy a tekst">
+<!ENTITY Ctr_icons_t		"Faworitowe a druge symbole">
 
 <!ENTITY Ctr_tabs			"Rejtarki">
 <!ENTITY Ctr_tabs0			"Wukulowaśone rejtarki (standard za Australis)">
@@ -28,23 +29,28 @@
 <!ENTITY Ctr_tabs1m			"Rožkate rejtarki (na Australis pśiměrjony)">
 <!ENTITY Ctr_tabs2			"Wukulowaśone rejtarki (alternatiwny)">
 <!ENTITY Ctr_tabs3			"Wukulowaśone rejtarki (alternatiwa Aero)">
-<!ENTITY Ctr_tabforminfo	"Tab appearance is controlled by the current theme.">
+<!ENTITY Ctr_tabforminfo	"Naglěd rejtarkow wótwisujo wót aktualneje drastwy.">
 <!ENTITY Ctr_tabsontop0		"Rejtarki górjejce (standard) - [njenastajony]">
 <!ENTITY Ctr_tabsontop1		"Rejtarki górjejce - stajśo [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Rejtarki nic górjejce - stajśo [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Rejtarki nic górjejce (v2) - stajśo [tabsontop=false]">
 <!ENTITY Ctr_tabsontopI1	"Pśidawa atribut [tabsontop=true/false] na">
 <!ENTITY Ctr_tabsintitlebar	"Titelowa rědka Firefox (about:config)">
 <!ENTITY Ctr_tabwidthdef	"(standard)">
 <!ENTITY Ctr_tabwidthcla	"(klasiski)">
 <!ENTITY Ctr_tabmaxwidth	"Maksimalna šyrokosć:">
 <!ENTITY Ctr_tabminwidth	"Minimalna šyrokosć:">
-<!ENTITY Ctr_tabwidthinfo	"Tabs min-width and max-width are controlled by TabMixPlus / TabUtilities">
-<!ENTITY Ctr_closetab_0		"Rejtark zacyniś (standard)">
-<!ENTITY Ctr_closetab_1		"Rejtark zacyniś: jano na aktiwnem rejtarku">
-<!ENTITY Ctr_closetab_2		"Rejtark zacyniś: niźi">
-<!ENTITY Ctr_closetab_3		"Rejtark zacyniś: na kóńcu rejtarkoweje rědki">
-<!ENTITY Ctr_closetab_4		"Rejtark zacyniś: na zachopjeńku rejtarkoweje rědki">
-<!ENTITY Ctr_closetab_5		"Rejtark zacyniś: na wšych rejtarkach (forced)">
+<!ENTITY Ctr_tabwidthinfo	"Maksimalna a minimalna šyrokosć wótwisujotej wót TabMixPlus / TabUtilities">
+<!ENTITY Ctr_closetab_0		"Rejtark zacyniś">
+<!ENTITY Ctr_closetab_1		"Jano na aktiwnem rejtarku">
+<!ENTITY Ctr_closetab_2		"Niźi">
+<!ENTITY Ctr_closetab_3		"Na kóńcu rejtarkoweje rědki">
+<!ENTITY Ctr_closetab_4		"Na zachopjeńku rejtarkoweje rědki">
+<!ENTITY Ctr_closetab_5		"Na wšych rejtarkach (wunuźony)">
+<!ENTITY Ctr_closetab_hfot	"Hide for one visible tab">
+<!ENTITY Ctr_closealt		"Alternative icon">
+<!ENTITY Ctr_closeonleft	"Alternative position on tab">
+<!ENTITY Ctr_close_wwltab	"Close window with last visible tab (about:config)">
 
 <!ENTITY Ctr_appbutton		"Nałožeński tłocašk">
 <!ENTITY Ctr_appbutton0		"Tłocašk znjemóžnjony">
@@ -52,7 +58,7 @@
 <!ENTITY Ctr_appbutton1wt	"Tłocašk na symbolowej rědce (jano tekst)">
 <!ENTITY Ctr_appbutton2		"Tłocašk na titelowej rědce [Firefox]">
 <!ENTITY Ctr_appbutton2io	"Tłocašk na titelowej rědce [Firefox] (jano symbol)">
-<!ENTITY Ctr_paneluibtweak	"Orange panel menu button on tabs toolbar">
+<!ENTITY Ctr_paneluibtweak	"Oranžowy menijowy tłocašk na rejtarkowej rědce">
 <!ENTITY Ctr_appbuttonc_o	"Tłocaškowa barwa: Oranžowy (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Tłocaškkowa barwa: Módry (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Tłocaškowa barwa: Carny (Nightly)">
@@ -74,17 +80,19 @@
 <!ENTITY Ctr_ui				"Wužywarski pówjerch">
 <!ENTITY Ctr_nbiconsize0	"Atribut nawigaciskeje rědki stajiś">
 <!ENTITY Ctr_smallnavbut	"Małe tłocaški na nawigaciskej rědce">
-<!ENTITY Ctr_bfurlbarfix	"Ramikowy radius za 'pśesuwajobny tłocašk Slědk/Doprědka' a 'naglěd małych tłocaškow' pópšawiś">
+<!ENTITY Ctr_bfurlbarfix	"Ramikowy radius za adresowe rědki pópšawiś">
 <!ENTITY Ctr_backforward	"Pśesuwajobny tłocašk Slědk-Doprědka">
 <!ENTITY Ctr_hide_bf_popup	"Meni historije pśez tłocenje myškoweje tasty schowaś">
+<!ENTITY Ctr_noconicons		"Replace page context menu icons with labels (back, forward, stop, reload, bookmark page)">
 <!ENTITY Ctr_wincontrols	"Pśesuwajobne wóźeńske elementy połneje wobrazowki">
 <!ENTITY Ctr_starinurl		"Gwězdowy tłocašk w adresowej rědce (startujśo Firefox znowego!)">
+<!ENTITY Ctr_feedinurl		"Feed-button in urlbar (startujśo Firefox znowego!)">
 <!ENTITY Ctr_mstatusbar		"Pśesuwajobny wobcerk statusoweje rědki">
 <!ENTITY Ctr_hideurelstop	"Tłocaška Stoj a Znowego adresowych rědkow schowaś">
 <!ENTITY Ctr_combrelstop	"Tłocaška Stoj a Znowego kombiněrowaś">
 <!ENTITY Ctr_panelmenucol	"Pólowe menije: alternatiwna slězynowa barwa">
 <!ENTITY Ctr_hideprivmask	"Priwatny modus: maskowy pokazowaŕ schowaś">
-<!ENTITY Ctr_verifiedcolors	"Green/blue identity-box for verified websites">
+<!ENTITY Ctr_verifiedcolors	"Zeleny/módry identifikaciski kašćik za wobkšuśone websedła">
 <!ENTITY Ctr_findbar		"Pytańska rědka">
 <!ENTITY Ctr_findbar_def	"Standardna pozicija">
 <!ENTITY Ctr_findbar_top	"Górjejce">
@@ -95,8 +103,8 @@
 <!ENTITY Ctr_nav_txt_ico1	"Wjelike symbole pokazaś">
 <!ENTITY Ctr_nav_txt_ico2	"Symbole a tekst pokazaś">
 <!ENTITY Ctr_nav_txt_ico3	"Jano tekst pokazaś">
-<!ENTITY Ctr_stoprel0		"Reload and stop button settings">
-<!ENTITY Ctr_stoprel1		"Toolbar: place reload button after stop button!">
+<!ENTITY Ctr_stoprel0		"Nastajenja za tłocaška Znowego a Stoj">
+<!ENTITY Ctr_stoprel1		"Wažny: Tłocašk Znowego za tłocaškom Stoj placěrowaś!">
 <!ENTITY Ctr_cpanelmenus	"Kompaktne pólowe menije (cytańske znamjenja, historija atd.)">
 <!ENTITY Ctr_hidezoomres	"Skalěrowańske elementy na symbolowej rědce: Tłocašk za slědkstajenje skalěrowanja schowaś">
 <!ENTITY Ctr_pmhidelabels	"Pólowy meni: Tekst tłocaškow schowaś">
@@ -115,7 +123,6 @@
 <!ENTITY Ctr_tabpen_t		"njezacytany">
 <!ENTITY Ctr_tabunr_t		"njecyitany">
 <!ENTITY Ctr_ntab_t			"nowy rejtark">
-<!ENTITY Ctr_customsqtab0	"Swójske rejtarkowe barwy">
 <!ENTITY Ctr_customsqtab1	"Slězyna">
 <!ENTITY Ctr_ctext			"Tekst">
 <!ENTITY Ctr_ctextsh		"Tekstowy wóseń">
@@ -131,13 +138,15 @@
 
 <!ENTITY Ctr_favicon		"Faworitowy symbol">
 <!ENTITY Ctr_emptyfavicon	"Prozny faworitowy symbol wótnowiś (jolic sedło njepóbitujo žeden)">
-<!ENTITY Ctr_emptyfavicon2	"Replace generic favicon (empty and dotted) with sheet favicon">
-<!ENTITY Ctr_faviconurl		"Favicon in urlbar (restart Firefox!)">
-<!ENTITY Ctr_padlock_hid	"Padlock (hidden)">
-<!ENTITY Ctr_padlock_def	"Padlock (default)">
-<!ENTITY Ctr_padlock_cla	"Padlock (classic)">
-<!ENTITY Ctr_padlock_mod	"Padlock (modern)">
-<!ENTITY Ctr_padlock_ext	"Security icons">
+<!ENTITY Ctr_emptyfavicon2	"Prozny a dypkaty faworitowy symbol pśez łopjenowy symbol wuměniś">
+<!ENTITY Ctr_noemptypticon	"Remove empty favicon from pinned tab">
+<!ENTITY Ctr_faviconurl0	"Icons in urlbar">
+<!ENTITY Ctr_faviconurl		"Faworitowy symbol w adresowej rědce (Firefox znowego startowaś!)">
+<!ENTITY Ctr_padlock_hid	"Pytkowy symbol (schowany)">
+<!ENTITY Ctr_padlock_def	"Pytkowy symbol (standard)">
+<!ENTITY Ctr_padlock_cla	"Pytkowy symbol (klasiski)">
+<!ENTITY Ctr_padlock_mod	"Pytkowy symbol (moderny)">
+<!ENTITY Ctr_padlock_ext	"Wěstotne symbole">
 
 <!ENTITY Ctr_invicons		"Inwertěrowane symbole">
 <!ENTITY Ctr_menubar		"Menijowa rědka">
@@ -147,7 +156,7 @@
 
 <!ENTITY Ctr_toolbars		"Nastajenja symboloweje rědki">
 <!ENTITY Ctr_dblclnewtab	"Dwójne kliknjenje wócynja 'nowy' rejtark (z pomocu browser.newtab.url)">
-<!ENTITY Ctr_hidetbwot		"Hide tabs toolbar with one tab (restart Firefox!)">
+<!ENTITY Ctr_hidetbwot		"Rejtarkowu rědku z jano jadnym rejtarkom schowaś (Firefox znowego startowaś!)">
 <!ENTITY Ctr_notabfog		"Slězynowu młu wótpóraś (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"Slězynowu barwu wótpóraś (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"Mjazyrum wušej symboloweje rědki reducěrowaś (jolic móžno)">
@@ -165,29 +174,28 @@
 
 <!ENTITY Ctr_closeabarbut	"Tłocašk 'Zacyniś' na rědce dodankow schowaś">
 <!ENTITY Ctr_highaddonsbar	"Wusokosć symboloweje rědki pówětšyś">
-<!ENTITY Ctr_noaddonbarbg	"Slězynowu barwu wótpóraś (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_animation		"Animacija">
 <!ENTITY Ctr_throbberalt	"Alternatiwna animacija za zacytowanje rejtarkowego symbola">
 <!ENTITY Ctr_bmanimation	"Animacija za 'Cytańske znamje pśidaś">
 <!ENTITY Ctr_pananimation	"Animacija za wócynjanje póla">
-<!ENTITY Ctr_tabanimation	"Animacija za zacynjanje/wócynjanje rejtarka (about:config)">
-<!ENTITY Ctr_dlanimation	"Animacija za 'ześěgnjeńske zdźělenje' (about:config)">
+<!ENTITY Ctr_tabanimation	"Animacija za zacynjanje/wócynjanje rejtarka (nastajenje about:config)">
+<!ENTITY Ctr_dlanimation	"Animacija za 'ześěgnjeńske zdźělenje' (nastajenje about:config)">
 
 <!ENTITY Ctr_toolsitem		"Menijowy zapisk w meniju Rědy">
 <!ENTITY Ctr_appmenuitem	"Menijowy zapisk w meniju nałožeńskich tłocaškow">
-<!ENTITY Ctr_contextitem	"Menuitem in toolbars context menu">
+<!ENTITY Ctr_contextitem	"Menijowy zapisk w kontekstowem meniju symbolowych rědkow">
 <!ENTITY Ctr_cuibotbuttons	"Wósebne tłocaški w 'pśiměrjeńskem' modusu">
 
 
-<!ENTITY Ctr_pw_settings	"Settings">
-<!ENTITY Ctr_pw_set_reset	"Restore defaults">
-<!ENTITY Ctr_pw_set_predef	"Classic preset">
-<!ENTITY Ctr_pw_set_export	"Export preferences">
-<!ENTITY Ctr_pw_set_import	"Import preferences">
+<!ENTITY Ctr_pw_settings	"Nastajenja">
+<!ENTITY Ctr_pw_set_reset	"Standard wótnowiś">
+<!ENTITY Ctr_pw_set_predef	"Klasiske standardne gódnoty">
+<!ENTITY Ctr_pw_set_export	"Nastajenja eksportěrowaś">
+<!ENTITY Ctr_pw_set_import	"Nastajenja importěrowaś">
 
 <!ENTITY Ctr_special_font	"Nastajenja za slězynowu barwu su jano za standardnu drastwu!">
-<!ENTITY Ctr_special_info	"Někotare nastajenja póbituju wizuelne změny jano we wěstach padach!">
+<!ENTITY Ctr_special_info	"Někotare nastajenja njepóbituju wizuelne změny we wšych padach!">
 <!ENTITY Ctr_special_info2	"Nastajenja su za standardnu drastwu zgótowane a jo móžno, až njefunkcioněrujuz z drugimi drastwami!">
 <!ENTITY Ctr_support		"Pódpěrowański forum">
 <!ENTITY Ctr_newversion		"Nowa wersija?">
