--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -7,6 +7,7 @@
 <!ENTITY Ctr_space			"Espace">
 <!ENTITY Ctr_separator		"Séparateur">
 <!ENTITY Ctr_puibseparator	"Séparateur du bouton menu">
+<!ENTITY Ctr_sidebarbutton	"(Sidebar)">
 
 <!ENTITY Ctr_cuibuttons		"Boutons">
 <!ENTITY Ctr_cuibutnormal	"Taille normale">
@@ -32,6 +33,7 @@
 <!ENTITY Ctr_tabsontop0		"Onglets en haut (réglage par défaut)">
 <!ENTITY Ctr_tabsontop1		"Onglets en haut - réglage [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Onglets position basse - réglage [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"Onglets position basse (v2) - réglage [tabsontop=false]">
 <!ENTITY Ctr_tabsontopI1	"L'attribut [tabsontop=true/false] est assigné à">
 <!ENTITY Ctr_tabsintitlebar	"Barre de titre Firefox (about:config)">
 <!ENTITY Ctr_tabwidthdef	"(défaut)">
@@ -39,12 +41,16 @@
 <!ENTITY Ctr_tabmaxwidth	"Largeur maximale:">
 <!ENTITY Ctr_tabminwidth	"Largeur minimale:">
 <!ENTITY Ctr_tabwidthinfo	"Onglets : les largeurs mini et maxi sont controlées par TabMixPlus / TabUtilities">
-<!ENTITY Ctr_closetab_0		"Bouton de fermeture (défaut)">
-<!ENTITY Ctr_closetab_1		"Bouton de fermeture : onglet actif uniquement">
-<!ENTITY Ctr_closetab_2		"Bouton de fermeture : aucun">
-<!ENTITY Ctr_closetab_3		"Bouton de fermeture : à la fin de la barre d'onglets">
-<!ENTITY Ctr_closetab_4		"Bouton de fermeture : au début de la barre d'onglets">
-<!ENTITY Ctr_closetab_5		"Bouton de fermeture : sur tous les onglets (forcé)">
+<!ENTITY Ctr_closetab_0		"Bouton de fermeture">
+<!ENTITY Ctr_closetab_1		"Onglet actif uniquement">
+<!ENTITY Ctr_closetab_2		"Aucun">
+<!ENTITY Ctr_closetab_3		"À la fin de la barre d'onglets">
+<!ENTITY Ctr_closetab_4		"Au début de la barre d'onglets">
+<!ENTITY Ctr_closetab_5		"Sur tous les onglets (forcé)">
+<!ENTITY Ctr_closetab_hfot	"Hide for one visible tab">
+<!ENTITY Ctr_closealt		"Alternative icon">
+<!ENTITY Ctr_closeonleft	"Alternative position on tab">
+<!ENTITY Ctr_close_wwltab	"Close window with last visible tab (about:config)">
 
 <!ENTITY Ctr_appbutton		"Bouton d'applications">
 <!ENTITY Ctr_appbutton0		"Bouton désactivé">
@@ -77,8 +83,10 @@
 <!ENTITY Ctr_bfurlbarfix 	"Corriger le border-radius de la barre d'adresse">
 <!ENTITY Ctr_backforward	"Bouton avancer/reculer déplaçable">
 <!ENTITY Ctr_hide_bf_popup	"Cacher le menu historique lors du clic droit">
+<!ENTITY Ctr_noconicons		"Replace page context menu icons with labels (back, forward, stop, reload, bookmark page)">
 <!ENTITY Ctr_wincontrols	"Plein écran : boutons 'Réduire - Restaurer - Fermer' déplaçables">
 <!ENTITY Ctr_starinurl		"Bouton des marque-pages dans la barre d'adresse (redémarrer Fx!)">
+<!ENTITY Ctr_feedinurl		"Feed-button in urlbar (redémarrer Fx!)">
 <!ENTITY Ctr_mstatusbar		"Barre d'état déplaçable">
 <!ENTITY Ctr_hideurelstop	"Masquer 'stop-actualiser' sur la barre d'adresse">
 <!ENTITY Ctr_combrelstop 	"Combiner les boutons stop-actualiser">
@@ -115,7 +123,6 @@
 <!ENTITY Ctr_tabpen_t		"non chargé">
 <!ENTITY Ctr_tabunr_t		"non lu">
 <!ENTITY Ctr_ntab_t			"nouvel onglet">
-<!ENTITY Ctr_customsqtab0	"Couleurs des onglets">
 <!ENTITY Ctr_customsqtab1	"Fond">
 <!ENTITY Ctr_ctext			"Texte">
 <!ENTITY Ctr_ctextsh		"Ombre du texte">
@@ -132,6 +139,8 @@
 <!ENTITY Ctr_favicon		"Favicon">
 <!ENTITY Ctr_emptyfavicon	"Restaurer le favicon vide sur les onglets (sites ne possédant pas de favicon)">
 <!ENTITY Ctr_emptyfavicon2	"Remplacer le favicon générique (vide avec pointillés) par un favicon avec l'aspect d'une feuille de papier">
+<!ENTITY Ctr_noemptypticon	"Remove empty favicon from pinned tab">
+<!ENTITY Ctr_faviconurl0	"Icons in urlbar">
 <!ENTITY Ctr_faviconurl		"Afficher le favicon dans la barre d'adresse (redémarrer Firefox!)">
 <!ENTITY Ctr_padlock_hid	"Cadenas (caché)">
 <!ENTITY Ctr_padlock_def	"Cadenas (par défaut)">
@@ -165,7 +174,6 @@
 
 <!ENTITY Ctr_closeabarbut	"Masquer le bouton de fermeture">
 <!ENTITY Ctr_highaddonsbar	"Augmenter la hauteur">
-<!ENTITY Ctr_noaddonbarbg	"Enlever l'arrière-plan (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_animation		"Animation">
 <!ENTITY Ctr_throbberalt	"Icône animée alternative pour le chargement des onglets">
