--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -7,6 +7,7 @@
 <!ENTITY Ctr_space			"空白">
 <!ENTITY Ctr_separator		"分隔線">
 <!ENTITY Ctr_puibseparator	"面板按鈕分隔線">
+<!ENTITY Ctr_sidebarbutton	"(Sidebar)">
 
 <!ENTITY Ctr_cuibuttons		"按鈕">
 <!ENTITY Ctr_cuibutnormal	"標準圖示">
@@ -20,7 +21,7 @@
 <!ENTITY Ctr_tnot			"(分頁列不置頂)">
 
 <!ENTITY Ctr_tabcolors_t	"色彩">
-<!ENTITY Ctr_icons_t		"Favicon &amp; icons">
+<!ENTITY Ctr_icons_t		"網站圖示 &amp; 工具列圖示">
 
 <!ENTITY Ctr_tabs			"分頁">
 <!ENTITY Ctr_tabs0			"弧形分頁 (Australis 預設值)">
@@ -28,23 +29,28 @@
 <!ENTITY Ctr_tabs1m			"矩形分頁 (仿 Australis 風格)">
 <!ENTITY Ctr_tabs2			"弧形分頁 (非傳統風格)">
 <!ENTITY Ctr_tabs3			"弧形分頁 (Aero 風格)">
-<!ENTITY Ctr_tabforminfo	"Tab appearance is controlled by the current theme.">
+<!ENTITY Ctr_tabforminfo	"分頁外觀由目前的佈景主題控制">
 <!ENTITY Ctr_tabsontop0		"分頁列置頂 (預設值) - [無設定]">
 <!ENTITY Ctr_tabsontop1		"分頁列置頂 - 設定 [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"分頁列不置頂 - 設定 [tabsontop=false]">
+<!ENTITY Ctr_tabsontop3		"分頁列不置頂 (v2) - 設定 [tabsontop=false]">
 <!ENTITY Ctr_tabsontopI1	"加入 [tabsontop=true/false] 屬性到">
 <!ENTITY Ctr_tabsintitlebar	"分頁列併入標題列 (about:config)">
 <!ENTITY Ctr_tabwidthdef	"(預設值)">
 <!ENTITY Ctr_tabwidthcla	"(經典傳統)">
 <!ENTITY Ctr_tabmaxwidth	"最大寬度:">
 <!ENTITY Ctr_tabminwidth	"最小寬度:">
-<!ENTITY Ctr_tabwidthinfo	"Tabs min-width and max-width are controlled by TabMixPlus / TabUtilities">
-<!ENTITY Ctr_closetab_0		"關閉按鈕 (預設值)">
+<!ENTITY Ctr_tabwidthinfo	"分頁的最小和最大寬度由 TabMixPlus / TabUtilities 控制">
+<!ENTITY Ctr_closetab_0		"關閉按鈕">
 <!ENTITY Ctr_closetab_1		"僅在目前的分頁顯示關閉按鈕">
 <!ENTITY Ctr_closetab_2		"不顯示關閉按鈕 ">
 <!ENTITY Ctr_closetab_3		"在分頁列右端顯示關閉按鈕">
 <!ENTITY Ctr_closetab_4		"在分頁列左端顯示關閉按鈕">
-<!ENTITY Ctr_closetab_5		"全部的分頁都顯示關閉按鈕 (forced)">
+<!ENTITY Ctr_closetab_5		"全部的分頁都顯示關閉按鈕 (強制)">
+<!ENTITY Ctr_closetab_hfot	"Hide for one visible tab">
+<!ENTITY Ctr_closealt		"Alternative icon">
+<!ENTITY Ctr_closeonleft	"Alternative position on tab">
+<!ENTITY Ctr_close_wwltab	"Close window with last visible tab (about:config)">
 
 <!ENTITY Ctr_appbutton		"應用程式按鈕 (火狐橙按鈕)">
 <!ENTITY Ctr_appbutton0		"不顯示">
@@ -52,7 +58,7 @@
 <!ENTITY Ctr_appbutton1wt	"顯示在工具列 (僅文字)">
 <!ENTITY Ctr_appbutton2		"顯示在標題列">
 <!ENTITY Ctr_appbutton2io	"顯示在標題列 (僅圖示)">
-<!ENTITY Ctr_paneluibtweak	"Orange panel menu button on tabs toolbar">
+<!ENTITY Ctr_paneluibtweak	"橘色面板選單按鈕顯示在分頁列">
 <!ENTITY Ctr_appbuttonc_o	"橙色按鈕 (預設值)">
 <!ENTITY Ctr_appbuttonc_a	"藍色按鈕 (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"黑色按鈕 (Nightly)">
@@ -65,7 +71,7 @@
 <!ENTITY Ctr_appbuttonc_wh	"白色按鈕">
 <!ENTITY Ctr_appbuttonI1	"建議重啟瀏覽器!">
 <!ENTITY Ctr_appbuttonI1e	"在作業系統標題列上不可見">
-<!ENTITY Ctr_appbuttonI2	"此項設定僅生效於標題列 與分頁列!">
+<!ENTITY Ctr_appbuttonI2	"此項設定僅生效於標題列與分頁列!">
 <!ENTITY Ctr_alttbappb		"替代圖示">
 <!ENTITY Ctr_appbutmhi		"提高位置 (當顯示於分頁列時)">
 <!ENTITY Ctr_appbutbdl		"隱藏邊框和背景顏色">
@@ -74,17 +80,19 @@
 <!ENTITY Ctr_ui				"介面">
 <!ENTITY Ctr_nbiconsize0	"設定瀏覽工具列屬性">
 <!ENTITY Ctr_smallnavbut	"在瀏覽工具列使用小圖示按鈕">
-<!ENTITY Ctr_bfurlbarfix	"當「回到上一頁按鈕可移動」和「小圖示按鈕」模式下，固定網址列圓角半徑">
+<!ENTITY Ctr_bfurlbarfix	"當「回到上一頁按鈕可移動」和「小圖示按鈕」模式下，修正網址列圓角半徑">
 <!ENTITY Ctr_backforward	"使「回到上一頁按鈕」可移動">
 <!ENTITY Ctr_hide_bf_popup	"當滑鼠長按時，不顯示分頁歷史瀏覽選單">
+<!ENTITY Ctr_noconicons		"Replace page context menu icons with labels (back, forward, stop, reload, bookmark page)">
 <!ENTITY Ctr_wincontrols	"可移動的全螢幕視窗控制項">
 <!ENTITY Ctr_starinurl		"星形書籤按鈕併入網址列 (需重啟 Firefox!)">
+<!ENTITY Ctr_feedinurl		"Feed-button in urlbar (需重啟 Firefox!)">
 <!ENTITY Ctr_mstatusbar		"使狀態列可移動">
 <!ENTITY Ctr_hideurelstop	"隱藏網址列中的停止與重新載入按鈕">
 <!ENTITY Ctr_combrelstop	"合併停止與重新載入按鈕">
 <!ENTITY Ctr_panelmenucol	"面板選單: 換一個背景色彩">
 <!ENTITY Ctr_hideprivmask	"隱私瀏覽模式下，隱藏面具圖示">
-<!ENTITY Ctr_verifiedcolors	"Green/blue identity-box for verified websites">
+<!ENTITY Ctr_verifiedcolors	"已驗證的網站識別鈕顯示為綠色/藍色">
 <!ENTITY Ctr_findbar		"尋找列位於">
 <!ENTITY Ctr_findbar_def	"預設位置">
 <!ENTITY Ctr_findbar_top	"頂部">
@@ -95,8 +103,8 @@
 <!ENTITY Ctr_nav_txt_ico1	"顯示大圖示">
 <!ENTITY Ctr_nav_txt_ico2	"顯示圖示與文字">
 <!ENTITY Ctr_nav_txt_ico3	"僅顯示文字">
-<!ENTITY Ctr_stoprel0		"Reload and stop button settings">
-<!ENTITY Ctr_stoprel1		"Toolbar: place reload button after stop button!">
+<!ENTITY Ctr_stoprel0		"停止和重新載入按鈕設定">
+<!ENTITY Ctr_stoprel1		"工具列: 將重新載入按鈕放在停止按鈕之後!">
 <!ENTITY Ctr_cpanelmenus	"緊湊的面板選單(書籤、歷史等等.)">
 <!ENTITY Ctr_hidezoomres	"當縮放控制按鈕置於工具列上時，隱藏工具列上的縮放重設按鈕">
 <!ENTITY Ctr_pmhidelabels	"面板選單: 隱藏按鈕文字標籤">
@@ -115,7 +123,6 @@
 <!ENTITY Ctr_tabpen_t		"未載入">
 <!ENTITY Ctr_tabunr_t		"未讀">
 <!ENTITY Ctr_ntab_t			"新分頁">
-<!ENTITY Ctr_customsqtab0	"自訂分頁色彩">
 <!ENTITY Ctr_customsqtab1	"背景">
 <!ENTITY Ctr_ctext			"文字">
 <!ENTITY Ctr_ctextsh		"文字陰影">
@@ -129,15 +136,17 @@
 <!ENTITY Ctr_bold			"粗體">
 <!ENTITY Ctr_italic			"斜體">
 
-<!ENTITY Ctr_favicon		"Favicon settings">
+<!ENTITY Ctr_favicon		"網站圖示設定">
 <!ENTITY Ctr_emptyfavicon	"開啟的網頁若未提供網站圖示，仍在該分頁顯示空圖示">
-<!ENTITY Ctr_emptyfavicon2	"Replace generic favicon (empty and dotted) with sheet favicon">
-<!ENTITY Ctr_faviconurl		"Favicon in urlbar (restart Firefox!)">
-<!ENTITY Ctr_padlock_hid	"Padlock (hidden)">
-<!ENTITY Ctr_padlock_def	"Padlock (default)">
-<!ENTITY Ctr_padlock_cla	"Padlock (classic)">
-<!ENTITY Ctr_padlock_mod	"Padlock (modern)">
-<!ENTITY Ctr_padlock_ext	"Security icons">
+<!ENTITY Ctr_emptyfavicon2	"以白紙圖示取代空圖示">
+<!ENTITY Ctr_noemptypticon	"Remove empty favicon from pinned tab">
+<!ENTITY Ctr_faviconurl0	"Icons in urlbar">
+<!ENTITY Ctr_faviconurl		"網址列顯示網站圖示 (需重啟 Firefox!)">
+<!ENTITY Ctr_padlock_hid	"鎖頭 (隱藏)">
+<!ENTITY Ctr_padlock_def	"鎖頭 (預設)">
+<!ENTITY Ctr_padlock_cla	"鎖頭 (經典風格)">
+<!ENTITY Ctr_padlock_mod	"鎖頭 (現代風格)">
+<!ENTITY Ctr_padlock_ext	"安全圖示">
 
 <!ENTITY Ctr_invicons		"圖示反相">
 <!ENTITY Ctr_menubar		"選單列">
@@ -147,14 +156,14 @@
 
 <!ENTITY Ctr_toolbars		"工具列">
 <!ENTITY Ctr_dblclnewtab	"在分頁列上連按兩下，則開啟新分頁(分頁網址由 browser.newtab.url 設定)">
-<!ENTITY Ctr_hidetbwot		"Hide tabs toolbar with one tab (restart Firefox!)">
+<!ENTITY Ctr_hidetbwot		"當只有一個分頁時，隱藏分頁工具列 (需重啟 Firefox!)">
 <!ENTITY Ctr_notabfog		"移除背景模糊 (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"移除背景色彩 (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_hightabpos		"縮小分頁列上方空間 (如有可能)">
 <!ENTITY Ctr_alttabstb		"換一個背景色彩">
 
 <!ENTITY Ctr_altmenubar		"加上背景色彩 (OS 標題列)">
-<!ENTITY Ctr_altmenubarpos	"Alternative position (below titlebar)">
+<!ENTITY Ctr_altmenubarpos	"換一個位置 (標題列下方)">
 <!ENTITY Ctr_menubarnofog	"移除背景色彩/模糊 (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_hidenavbar		"隱藏瀏覽工具列">
@@ -165,7 +174,6 @@
 
 <!ENTITY Ctr_closeabarbut	"隱藏附加元件關閉按鈕">
 <!ENTITY Ctr_highaddonsbar	"增加附加元件列高度">
-<!ENTITY Ctr_noaddonbarbg	"移除背景色彩 (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_animation		"動畫">
 <!ENTITY Ctr_throbberalt	"換一個分頁載入圖示動畫 (進度指示器)">
@@ -176,15 +184,15 @@
 
 <!ENTITY Ctr_toolsitem		"工具選單中顯示 Classic Theme Restorer 項目">
 <!ENTITY Ctr_appmenuitem	"火狐橙選單中顯示 Classic Theme Restorer 項目">
-<!ENTITY Ctr_contextitem	"Menuitem in toolbars context menu">
+<!ENTITY Ctr_contextitem	"工具列右鍵選單中顯示 Classic Theme Restorer 項目">
 <!ENTITY Ctr_cuibotbuttons	"介面自訂模式中，更豐富的按鈕自訂選項">
 
 
-<!ENTITY Ctr_pw_settings	"Settings">
-<!ENTITY Ctr_pw_set_reset	"Restore defaults">
-<!ENTITY Ctr_pw_set_predef	"Classic preset">
-<!ENTITY Ctr_pw_set_export	"Export preferences">
-<!ENTITY Ctr_pw_set_import	"Import preferences">
+<!ENTITY Ctr_pw_settings	"設定">
+<!ENTITY Ctr_pw_set_reset	"恢復預設值">
+<!ENTITY Ctr_pw_set_predef	"經典設定值">
+<!ENTITY Ctr_pw_set_export	"匯出設定值">
+<!ENTITY Ctr_pw_set_import	"匯入設定值">
 
 <!ENTITY Ctr_special_font	"背景色彩設定僅生效於預設佈景主題!">
 <!ENTITY Ctr_special_info	"部份選項僅在某些情況下提供視覺上的變化!">
